Bug 451891 - Setting the payee matching to exact name is not persistent
Summary: Setting the payee matching to exact name is not persistent
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: file (other bugs)
Version First Reported In: 5.1.2
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-25 14:11 UTC by Thomas Baumgart
Modified: 2022-03-25 14:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2022-03-25 14:11:14 UTC
STEPS TO REPRODUCE
1. Set the matching method on a payee to "exact name"
2. Save the file and reload it

OBSERVED RESULT
Matching method on that payee changed to "partial name"

EXPECTED RESULT
Matching method remains "exact name"

Bug 424377 maybe related
Comment 1 Thomas Baumgart 2022-03-25 14:39:21 UTC
Git commit aecff7cf0a219618255bfc18401f933ee10580ff by Thomas Baumgart.
Committed on 25/03/2022 at 14:19.
Pushed by tbaumgart into branch 'master'.

Persist exact name matching

M  +4    -1    kmymoney/mymoney/mymoneypayee.cpp
M  +6    -5    kmymoney/views/kpayeesview.cpp

https://invent.kde.org/office/kmymoney/commit/aecff7cf0a219618255bfc18401f933ee10580ff
Comment 2 Thomas Baumgart 2022-03-25 14:40:51 UTC
Git commit eb5ea86a8c3ab6797275b5aee2d4c36cc4c7d7e5 by Thomas Baumgart.
Committed on 25/03/2022 at 14:40.
Pushed by tbaumgart into branch '5.1'.

Persist exact name matching
FIXED-IN: 5.1.3

(cherry picked from commit aecff7cf0a219618255bfc18401f933ee10580ff)

M  +4    -1    kmymoney/mymoney/mymoneypayee.cpp
M  +6    -5    kmymoney/views/kpayeesview.cpp

https://invent.kde.org/office/kmymoney/commit/eb5ea86a8c3ab6797275b5aee2d4c36cc4c7d7e5