Persist exact name matching

BUG: 451891
FIXED-IN: 5.1.3

(cherry picked from commit aecff7cf0a219618255bfc18401f933ee10580ff)